// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radio snapshots Radio: 0 1`] = `
<label
  className="radio-0-1-1"
  text="Default"
>
  <input
    checked={false}
    className="radio_input-0-1-3"
    disabled={null}
    onChange={[Function]}
    type="radio"
  />
  <span
    className="radio_stateIndicator-0-1-5"
  />
</label>
`;

exports[`radio snapshots Radio: 1 1`] = `
<div
  className="radio-0-1-6"
  text="div tag"
>
  <input
    checked={false}
    className="radio_input-0-1-8"
    disabled={null}
    onChange={[Function]}
    type="radio"
  />
  <span
    className="radio_stateIndicator-0-1-10"
  />
</div>
`;

exports[`radio snapshots Radio: 2 1`] = `
<label
  className="radio-0-1-11"
  text="label tag"
>
  <input
    checked={false}
    className="radio_input-0-1-13"
    disabled={null}
    onChange={[Function]}
    type="radio"
  />
  <span
    className="radio_stateIndicator-0-1-15"
  />
</label>
`;

exports[`radio snapshots Radio: 3 1`] = `
<label
  className="radio-0-1-16"
  text="Checked"
>
  <input
    checked={true}
    className="radio_input-0-1-18"
    disabled={null}
    onChange={[Function]}
    type="radio"
  />
  <span
    className="radio_stateIndicator-0-1-20"
  />
</label>
`;

exports[`radio snapshots Radio: 4 1`] = `
<label
  className="radio-0-1-21 radio__disabled-0-1-22"
  text="Disabled"
>
  <input
    checked={false}
    className="radio_input-0-1-23"
    disabled={true}
    onChange={[Function]}
    type="radio"
  />
  <span
    className="radio_stateIndicator-0-1-25"
  />
</label>
`;
